<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/bottomSheet"
                                                   style="@style/Animation.Design.BottomSheetDialog"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="#ffff"
                                                   app:behavior_hideable="false"
                                                   app:behavior_peekHeight="32dp"
                                                   app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
>


    <EditText
            android:id="@+id/enter_todo_et"
            android:layout_width="297dp"
            android:layout_height="44dp"
            android:layout_margin="16dp"
            android:hint="@string/enter_a_new_task"
            android:textSize="12sp"
            android:inputType="textPersonName"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:autofillHints="" android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.184"/>
    <EditText
            android:id="@+id/desc_et"
            android:layout_width="297dp"
            android:layout_height="44dp"
            android:layout_margin="16dp"
            android:hint="@string/description"
            android:textSize="12sp"
            android:inputType="textPersonName"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/enter_todo_et" android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.184"/>

    <ImageButton
            android:id="@+id/priority_todo_button"
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_image"
            android:clickable="true"
            app:srcCompat="@android:drawable/btn_star_big_off"
            app:layout_constraintStart_toEndOf="@+id/enter_todo_et"
            android:layout_marginEnd="6dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"/>
    <ImageButton
            android:id="@+id/save_todo_button"
            android:layout_width="70dp"
            android:layout_height="72dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:scaleX=".8"
            android:scaleY=".8"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/priority_todo_button"
            app:layout_constraintStart_toEndOf="@+id/desc_et" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:id="@+id/today_calendar_button"
            android:layout_width="49dp"
            android:layout_height="30dp"
            android:layout_marginStart="28dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_et"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" android:contentDescription="@string/todo"/>
    <TextView
            android:id="@+id/textView"
            android:layout_width="244dp"
            android:layout_height="33dp"
            android:layout_marginTop="48dp"
            android:gravity="center_horizontal"
            android:text="@string/due_date"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/today_calendar_button"/>

    <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="318dp"
            android:layout_height="296dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_et" android:layout_marginTop="10dp"/>


    <androidx.constraintlayout.widget.Group
            android:id="@+id/calendar_group"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:constraint_referenced_ids="calendar_view, textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.038" android:layout_marginStart="32dp"
    />


</androidx.constraintlayout.widget.ConstraintLayout>